[gd_scene load_steps=7 format=3 uid="uid://c38rdnxwrlxe1"]

[ext_resource type="Script" path="res://resources/ux/fitxa_material.gd" id="1_laimy"]
[ext_resource type="Texture2D" uid="uid://clkoj1mihtni" path="res://resources/treballador/imatges_treballadors/Char 1/Character 1.png" id="2_xn41b"]
[ext_resource type="Theme" uid="uid://cbnqop7u7csh" path="res://resources/ux/tema_UX.tres" id="3_1inpn"]
[ext_resource type="Texture2D" uid="uid://dqg86md3i3tvx" path="res://resources/ux/generic_icons/Coin2.png" id="4_8jsij"]
[ext_resource type="Texture2D" uid="uid://bb6dixs2bcdji" path="res://resources/ux/generic_icons/Cash.png" id="5_0dfw6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iq3pk"]
atlas = ExtResource("2_xn41b")
region = Rect2(0, 0, 64, 64)

[node name="Fitxa material" type="PanelContainer"]
script = ExtResource("1_laimy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="imatge" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_iq3pk")
expand_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="labelNom" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_1inpn")
text = "Nom treballador"

[node name="sou" type="PanelContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sou"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sou/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_8jsij")

[node name="labelPreu" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sou/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_1inpn")
text = "200€"

[node name="descripcio" type="RichTextLabel" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
theme = ExtResource("3_1inpn")
text = "jñkgkugñkugñkgñkgñkgñkgñkgkgñkgñkjgñkgkñgkjgkjgkjgkjgñkjgñkjgñkjgñkjgkñjgkjgñkgj"
fit_content = true
scroll_active = false

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="buttonCompra" type="TextureButton" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture_normal = ExtResource("5_0dfw6")
stretch_mode = 4
