extends PanelContainer
@onready var label_nom: Label = %labelNom
@onready var imatge: TextureRect = %imatge
@onready var descripcio: RichTextLabel = %descripcio
@onready var label_preu: Label = %labelPreu
@onready var button_compra: TextureButton = %buttonCompra


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
